<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/white"
    tools:context=".ui.SelectRoleFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="0.3"
        android:gravity="center"
        android:layout_marginTop="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mynda_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/select_role"
            android:textSize="18sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/connect_with_employers_and"
            android:textSize="18sp"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_regular"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/maid_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/maid_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_maid_1"/>

                <TextView
                    android:id="@+id/maid_role_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/are_you_a_maid_mynda"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_toEndOf="@id/maid_image_view"/>

                <TextView
                    android:id="@+id/create_account_text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_an_account"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_toEndOf="@id/maid_image_view"
                    android:layout_below="@id/maid_role_selection"/>

                <ImageView
                    android:id="@+id/arrow_right_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_circle_fill"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/agent_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/agent_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_agent_selection"/>

                <TextView
                    android:id="@+id/agent_role_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/are_you_an_agent"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_toEndOf="@id/agent_image_view"/>

                <TextView
                    android:id="@+id/create_account_text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_an_account"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_toEndOf="@id/agent_image_view"
                    android:layout_below="@id/agent_role_selection"/>

                <ImageView
                    android:id="@+id/arrow_right_image_view2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_circle_fill"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/employer_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/employer_image_view"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/ic_employer_selection"/>

                <TextView
                    android:id="@+id/employer_role_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/are_you_an_employer"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_toEndOf="@id/employer_image_view"/>

                <TextView
                    android:id="@+id/create_account_text3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_an_account"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_toEndOf="@id/employer_image_view"
                    android:layout_below="@id/employer_role_selection"/>

                <ImageView
                    android:id="@+id/arrow_right_image_view3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_circle_fill"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/lab_hospital_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:cardElevation="10dp"
            app:cardCornerRadius="10dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/lab_hospital_image_view"
                    android:layout_width="53dp"
                    android:layout_height="53dp"
                    android:src="@drawable/ic_hospital_selection"/>

                <TextView
                    android:id="@+id/lab_hospital_role_selection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/are_you_a_lab_hospital"
                    android:fontFamily="@font/montserrat_semibold"
                    android:layout_toEndOf="@id/lab_hospital_image_view"/>

                <TextView
                    android:id="@+id/create_account_text4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/create_an_account"
                    android:fontFamily="@font/montserrat_regular"
                    android:layout_toEndOf="@id/lab_hospital_image_view"
                    android:layout_below="@id/lab_hospital_role_selection"/>

                <ImageView
                    android:id="@+id/arrow_right_image_view4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_arrow_right_circle_fill"
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"/>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>